--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -5,8 +5,9 @@
   },
   "ConnectionStrings": {
     "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;",
   },
+
   "CatalogBaseUrl": "",
   "Logging": {
     "IncludeScopes": false,
