add feature flag demo

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -4,9 +4,11 @@
     "webBase": "https://localhost:44315/"
   },
   "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;",
+    "CatalogConnection": "Server=tcp:shop-prod.database.windows.net,1433;Initial Catalog=eShopDev;Persist Security Info=False;User ID=Alex;Password=@someThingComplicated1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityConnection": "Server=tcp:shop-prod.database.windows.net,1433;Initial Catalog=eShopDev;Persist Security Info=False;User ID=Alex;Password=@someThingComplicated1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
+
+  "useOnlyInMemoryDatabase": false,
 
   "CatalogBaseUrl": "",
   "Logging": {
@@ -24,6 +26,6 @@
       "NoResultsMessage": "THERE ARE NO RESULTS THAT MATCH YOUR SEARCH"
     }
   },
-  "UseAppConfig": false,
-  "AppConfigEndpoint": "{appconfig-endpoint}"
+  "UseAppConfig": true,
+  "AppConfigConnection": "Endpoint=https://eshop-web.azconfig.io;Id=D8QF;Secret=c3tLsU40+N7Dho1yuJA3LVnByEkwPorYU2zu7kydyfk="
 }
