--- a/.github/workflows/cd-azure-webapps-dotnet-core.yml
+++ b/.github/workflows/cd-azure-webapps-dotnet-core.yml
@@ -2,6 +2,10 @@ name: CD - DEV/PROD
 
 
 on:
+  push:
+    branches:
+      - dev
+      - main
   workflow_dispatch:
       inputs:
         environment:
