--- a/.github/workflows/ci-build-and-test.yml
+++ b/.github/workflows/ci-build-and-test.yml
@@ -4,8 +4,11 @@ on:
     branches:
       - dev
       - main
-  pull_request:
-    branches: [dev]
+  pull_request_target:
+    types:
+      - opened
+    branches:
+      - 'dev'
   
 name: CI DEV & Test
 
