--- a/.github/workflows/ci-build-and-test.yml
+++ b/.github/workflows/ci-build-and-test.yml
@@ -32,7 +32,9 @@ jobs:
            
          #checkout the repository
         - uses: actions/checkout@v2
-        
+          with: 
+           path: github.event.pull_request.base.ref
+           
         #prepare runner for desired .net version SDK
         - name: Setup .NET
           uses: actions/setup-dotnet@v1
