--- a/.github/workflows/ci-build-and-test.yml
+++ b/.github/workflows/ci-build-and-test.yml
@@ -4,12 +4,10 @@ on:
     branches:
       - dev
       - main
-  pull_request_target:
+  pull_request:
     types:
       - opened
-    branches:
-      - 'dev'
-      - 'main'
+
 
         
 name: CI DEV & Test
