--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -4,7 +4,7 @@
     "webBase": "https://localhost:44315/"
   },
   "ConnectionStrings": {
-    "CatalogConnection": "Server=tcp:shop-prod.database.windows.net,1433;Initial Catalog=eShopProd;Persist Security Info=False;User ID=Alex;Password=P@ssw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "CatalogConnection": "Server=tcp:shop-prod.database.windows.net,1433;Initial Catalog=eShopProd;Persist Security Info=False;User ID=Alex;Password=P@ssw0rd1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
